# c8

./: CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg.json
cmake/: warnings.cmake
src/: interpreter.cpp  main.cpp  opcode.hpp  state.cpp  state.hpp  state_impl.hpp
src/io/: debug_io_handler.cpp  debug_io_handler.hpp  io_handler.hpp  sdl_io_handler.cpp  sdl_io_handler.hpp  sdldebug_io_handler.cpp  text_io_handler.cpp  text_io_handler.hpp
src/opcodes/: drw.cpp  ld.cpp  vreg.cpp
test/: CMakeLists.txt
